# redline

./: .clang-format  .clang-tidy  .eslintignore  .gitignore  .gitmodules  .ninja_deps  .ninja_log  .pre-commit-config.yaml  ACTION_EXECUTION_ANALYSIS.md  AGENT_CONTEXT_MAP.html  AGENT_CONTEXT_MAP.md  CHARTER.MD  CMakeCache.txt  CMakeLists-base.txt  CMakeLists-dependencies.txt  CMakeLists-directories.txt  CMakeLists-llm.txt  CMakeLists.txt  Cargo.toml  CharterParser.cpp  Consultant.ts  Dockerfile  GAP_ANALYSIS.md  GAP_PLAN.md  GAP_REPORT.md  IMPLEMENTATION_PLAN.md  LmStudioMgr  LmStudioMgr.cpp  MEMORY_ARCHITECTURE.md  Makefile  README.md  RoleConfig.cmake  Untitled  __init__.py  after_generate.txt  agent_connector.py  agent_control.sh  agents.py  amp  asset_management_convention.md  (+98 more)
CMakeCache.txt.old/: CMakeCache.txt
action_execution_agent/: CMakeLists.txt  Makefile  action_execution_agent  action_execution_agent.cpp  cmake_install.cmake
agent_functions/: Supervisor.py
agents/: CMakeLists.txt  base.py  cognitive.py  execution.py  feedback.py  framework.py  memory.py  message_bus.py  metrics.py  planning.py  tools.py  user_interface.py
agents/action_execution_agent/: CMakeLists.txt
agents/cognitive_agent/: CMakeLists.txt  cognitive_agent.sh
agents/completion_agent/: CMakeLists.txt
agents/feedback_loop_agent/: CMakeLists.txt  feedback_loop_agent.cpp
agents/planning_agent/: CMakeLists.txt  planning_agent.cpp
blockedit_demo/: blockedit.sh  blockedit_demo.md
blockedit_demo_tmp/: blockedit.h  blockedits.md
clinetest/: Cline.ts
cmake/: AgentCommonFunctions.cmake  AgentFunctions.cmake  CharterTaskHandoff.cmake  LLMFunctions.cmake  agent_fsm.cmake  create_cache_directories.cmake  create_directories.cmake  generate_docs.cmake  llm_closures.cmake  monitor_status.cmake  prompt_feedback_loop.cmake  setup_venv.cmake  task_queue.md  update_memory.py  utils.cmake
cognitive_agent/: CMakeLists.txt  Makefile  cmake_install.cmake  cognitive_agent  cognitive_agent.cpp
completion_agent/: CMakeLists.txt  Makefile  cmake_install.cmake  completion_agent  completion_agent.cpp
controllers/: status_line_controller.py
docs/: llm_providers_manual.md  lmstudio_setup.md
feedback_loop_agent/: CMakeLists.txt  Makefile  cmake_install.cmake  feedback_loop_agent  feedback_loop_agent.cpp
include/: Makefile  auda.h  cmake_install.cmake  coordinate_editor.h  curl_client.h  iris.h  poet.h  sensa.h  waldo.h  whiz.h
llm_connector/: .pre-commit-config.yaml  README.md  __init__.py  lint_loop.sh  setup.py  setup.sh
llm_feedback_loop/: llm_feedback_loop
lmstudio/: CMakeLists.txt  Makefile  cmake_install.cmake
memory/: MemoryManager.py  MemoryManager.ts
memory_storage/: feedback_history.json  git-search.py  shell_patterns.json
methodology/: action_execution.cmake  cognitive.cmake  completion.cmake  feedback_loop.cmake  planning.cmake
mixer/: CMakeLists.txt  __init__.py  mixer.i  mixer.py
models/: status_line_config.py
planning_agent/: CMakeLists.txt  Makefile  cmake_install.cmake  planning_agent  planning_agent.cpp  planning_agent_exec
redline/: main.py  (+31 more)
src/: CHARTER.MD  CMakeCache.txt  CMakeLists.txt  Makefile  agents.py  blockedit.sh  charter_parser.cpp  cmake_install.cmake  coordinate_editor.cpp  curl_client.cpp  handoff.py  index.html?q=flowers  llm_api_call  llm_api_call.cpp  lms_spinup.py  lmstudio_tool.cpp  main.py  memory.py  messageLoop.js  normalize_paths.sh  openai_provider.cpp  perplexity.api.html  provider_utils.cpp  remove_dead_attributes.sh  reward_system.py  status.js  subsumption_architecture.py  test_blockedit.sh  testfile.txt  tools.py  unified_provider.cpp  unified_provider.h  utils.py  v0_api.py
src/agents/: __init__.py  action_agent.py  base_agent.py  completion_agent.py  feedback_loop_agent.py  planning_agent.py  reasoning_agent.py  supervisor_agent.py
src/clinetest/: seq.mermaid
src/clinetest/tests/: Cline.ts
src/controllers/: __init__.py
src/core/: LMStudioClient.cpp  LMStudioClient.h
src/handoff/: __init__.py  handoff_manager.py  handoff_mechanism.py
src/ladder/: agents.py  tools.py
src/memory/: MemoryManager.py  __init__.py  memory_manager.py
src/memory_storage/: git-search.py
src/models/: status_line_config.py
src/old/: ERROR_HANDLING_ANALYSIS.md  SHELL_SCREEN_ANALYSIS.md  THE_LADDER.md
src/prompts/: status_line_controller.py
src/reward/: __init__.py  reward_system.py
src/robots/: CMakeLists.txt
src/robots/include/: auda.h  iris.h  poet.h  robot.h  robot_team.h  sensa.h  waldo.h  whiz.h
src/robots/src/: auda.cpp  iris.cpp  poet.cpp  sensa.cpp  waldo.cpp  whiz.cpp
src/supervisor/: LMStudioManager.py  MessageLoop.py  PandasTool.py  ToolManager.py  WebSearch.py  __init__.py  agents.py  config.py  core.py  handlers.py  handoff.py  line_chopping_refactor.py  lms_controller.py  lms_launch_controller.py  lmstudio_manager.py  main.js  main.py  memory.py  prompt_sandwich.py  prompt_template.py  providers.py  requirements.txt  reward_system.py  status_line_factory.py  supervisor.py  tools.py  uplink.py  utils.py
src/supervisor/agents/: __init__.py  agent_base.py  base_agent.py  completion_agent.py  feedback_agent.py  supervisor_agent.py
src/supervisor/cognitive/: __init__.py  explanation_generator.py  finding_derivation.py
src/supervisor/cognitive/agents/: autoencoder_agent.py  base_agent.py  completion_agent.py  performance_counter_agent.py
src/supervisor/config/: __init__.py  supervisor_config.py
src/supervisor/connectors/: agent_connector.py
src/supervisor/memory/: manager.py
src/supervisor/providers/: __init__.py  generic.py
src/supervisor/tool/visitors/: __init__.py  bash_tools_visitor.py  dsl_visualization_visitor.py  metrics_logger_visitor.py  python_tools_visitor.py  review_latch_visitor.py
src/tests/: test_hello_world.py  test_line_chopping_refactor.py  test_petstore_refactor.py  test_tmpcline.py
src/uplink/: handlers.py
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run_cmake.sh .sh  test_coordinate_editor  test_coordinate_editor.cpp
test/test_data/: test_file.txt
(+147 files in other folders)
