[package]
name = "redline"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
// ...existing dependencies...

[build-dependencies]
// Add any build dependencies here

[package.metadata.scripts]
# Translate Makefile tasks to Cargo scripts
build = "cargo build"
test = "cargo test"
clean = "cargo clean"
