[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_connector"
version = "0.1.0"
description = "A connector for LLMs"
authors = [
  { name="Your Name", email="you@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "asyncio",
  "statistics",
  "typing",
]

[project.optional-dependencies]
test = [
  "pytest-asyncio",
  "pytest-cov",
  "pytest>=7.0",
  "coverage[toml]>=7.5",
]

[tool.hatch.version]
path = "llm_connector/__init__.py"
